--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "client",
   "private": true,
+  "homepage": "https://anuragrijhwani.github.io./onlineAuctionSystem",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -12,6 +14,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "formik": "^2.4.5",
+    "gh-pages": "^6.1.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.7.1",
